--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.0",
+    "devextreme": "^22.2.4",
+    "devextreme-aspnet-data-nojquery": "^2.9.1",
+    "devextreme-react": "^22.2.4",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "json-server": "^0.17.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -44,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "devextreme-themebuilder": "^22.2.4"
   }
 }
