Made the viewer work

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@progress/telerik-react-report-viewer": "^18.23.315",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "devextreme-react": "^22.2.4",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "jquery": "^3.6.4",
     "json-server": "^0.17.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
