Added async to fetchUserInfo

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ REACT_APP_MERCHANT=DEFAULT
 REACT_APP_PRODUCT_GRID_LIMIT=15
 REACT_APP_MAP_API_KEY=
 REACT_APP_GA_TAG_ID=G-N9C65S99SZ
-CI=true
+CI=false
 GENERATE_SOURCEMAP=false
