--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 APP_PRODUCTION=true
-REACT_APP_BASE_URL="https://ibusinessaccountservice.azurewebsites.net/login/Loginwithmicrosoft"
+REACT_APP_BASE_URL="https://192.168.1.13:7041/api"
+REACT_APP_SIGNUPIN_URL="https://192.168.1.13/MicrosoftIdentity/Account/SignIn"
+REACT_APP_SIDEMENUS_URL="https://modulemenus.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
 REACT_APP_API_VERSION=/api/v1/
 REACT_APP_MERCHANT=DEFAULT
 REACT_APP_PRODUCT_GRID_LIMIT=15
