--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
-REACT_APP_BASE_URL="https://192.168.100.14:7041/api"
-REACT_APP_SIGNUPIN_URL="https://192.168.100.14/MicrosoftIdentity/Account/SignIn"
-REACT_APP_SIDEMENUS_URL="https://modulemenus.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
+REACT_APP_BASE_URL="https://localhost:5001/api"
+REACT_APP_SIGNUPIN_URL="https://localhost:5001/MicrosoftIdentity/Account/SignIn"
+REACT_APP_SIDEMENUS_URL="https://ibusinesstestutils.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
 TMP_REACT_APP_BASE_URL=https://089c-2405-201-5800-ac4f-e834-52a7-3737-f30c.ngrok.io
+REACT_APP_SEC_API="https://localhost:7041/api"
 REACT_APP_API_VERSION=/api/v1/
 REACT_APP_MERCHANT=DEFAULT
 REACT_APP_PRODUCT_GRID_LIMIT=15
@@ -11,3 +12,4 @@ CI=true
 NODE_ENV=development
 PORT=3000
 HTTPS=true
+
