Modify the booking page

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 REACT_APP_BASE_URL="https://localhost:5001"
 REACT_APP_SIGNUPIN_URL="https://localhost:5001/MicrosoftIdentity/Account/SignIn"
+REACT_APP_SIGNOUT_URL="https://localhost:5001/MicrosoftIdentity/Account/SignOut"
 REACT_APP_SIDEMENUS_URL="https://ibusinesstestutils.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
 TMP_REACT_APP_BASE_URL=https://089c-2405-201-5800-ac4f-e834-52a7-3737-f30c.ngrok.io
 REACT_APP_SEC_API="https://localhost:7041/api"
