--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@azure/cosmos": "^3.17.3",
     "@emotion/react": "^11.10.5",
-    "http-proxy-middleware": "^2.0.6",
-    "merge": "^2.1.1",
-    "oidc-client": "^1.11.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
@@ -24,13 +21,15 @@
     "devextreme-react": "^22.2.4",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "http-proxy-middleware": "^2.0.6",
     "json-server": "^0.17.1",
     "jspdf": "^2.5.1",
+    "localforage": "^1.10.0",
+    "merge": "^2.1.1",
+    "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "reactstrap": "^9.1.1",
-    "rimraf": "^3.0.2",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
@@ -38,7 +37,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.2",
+    "reactstrap": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
