Update redux methods

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 REACT_APP_BASE_URL="https://localhost:5001"
+REACT_APP_ERP_URL="https://localhost:5000"
 REACT_APP_SIGNUPIN_URL="https://localhost:5001/MicrosoftIdentity/Account/SignIn"
 REACT_APP_SIGNOUT_URL="https://localhost:5001/MicrosoftIdentity/Account/SignOut"
 REACT_APP_SIDEMENUS_URL="https://ibusinesstestutils.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
