--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.2",
     "reactstrap": "^9.1.1",
@@ -68,10 +68,9 @@
     ]
   },
   "devDependencies": {
-    "devextreme-themebuilder": "^22.2.4",
-    "tailwindcss": "^3.2.4",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
+    "devextreme-themebuilder": "^22.2.4",
     "eslint": "^8.18.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
@@ -79,6 +78,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.7.4"
   }
 }
