--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 APP_PRODUCTION=true
+REACT_DEFAULT_DP="https://pp-b5facpcqcnbmaecm.z01.azurefd.net/profilepic/default.jpg"
 REACT_APP_BASE_URL="https://localhost:5001/api"
+REACT_APP_BASE_URL_ROOT="https://localhost:5001"
 REACT_APP_BASE_URL="https://192.168.100.14:7041/api"
 REACT_APP_SIGNUPIN_URL="https://localhost:5001/MicrosoftIdentity/Account/SignIn"
-REACT_APP_SIDEMENUS_URL="https://ibusinesstestutils.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
+REACT_APP_SIDEMENUS_URL_M="https://ibusinesstestutils.azurewebsites.net/api/CategoryMenus/GetModuleMenu"
+REACT_APP_SIDEMENUS_URL="https://localhost:5001/api/menus"
 REACT_APP_API_VERSION=/api/v1/
 REACT_APP_MERCHANT=DEFAULT
 REACT_APP_PRODUCT_GRID_LIMIT=15
