--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   }
 }
